# azharja

./: .clang-format  .gitignore  Azharja.pro  CMakeLists.txt  code-conventions.txt  data.cpp  data.h  datasavethread.cpp  datasavethread.h  dlgitemexplore.cpp  dlgitemexplore.h  item.cpp  item.h  itemexplorer.cpp  itemexplorer.h  itemparentswidget.h  itemwidget.cpp  itemwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savedatathread.cpp  savedatathread.h  scintillaeditcustom.cpp  scintillaeditcustom.h
scintilla/include/: ScintillaEdit.h
src/: BoyerMoore.cpp  BoyerMoore.h  CMakeLists.txt  boyermoore.cpp  boyermoore.h  data.cpp  data.h  datasavethread.cpp  datasavethread.h  item.cpp  item.h  itemexplorer.cpp  itemexplorer.h  itemparentswidget.cpp  itemparentswidget.h  itemwidget.cpp  itemwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.cpp  qtlockedfile.h  qtlockedfile_unix.cpp  qtlockedfile_win.cpp  qtsingleapplication.cpp  qtsingleapplication.h  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h  scintillaeditcustom.cpp  scintillaeditcustom.h
